sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var cpt = 0
  do{
    for (i<- 0 to getNombreValeurs-1){
      if (plusPetit(i,i+1)==true){
        echange(i,i+1)
        cpt=1
      }
    }
    for (i<- 0 to getNombreValeurs-1){
      for (j <- 0 to getNombreValeurs-i-1){
        if (plusPetit(j,j+1)==true){
          echange(j,j+1)
          cpt=1
        }
      }
    }
  } while (cpt=1)
}